.tekton/events/routes/route-cd-pipeline.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cd-pipeline
  namespace: zjt7988-dev
  uid: 11173a37-659e-4eb8-b71d-19d9af0b362c
  resourceVersion: '5313923080'
  creationTimestamp: '2024-12-02T19:58:36Z'
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: cd-listener
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-12-02T19:58:36Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-12-04T16:57:19Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/managed-by': {}
            'f:app.kubernetes.io/part-of': {}
            'f:eventlistener': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: cd-pipeline-zjt7988-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: el-cd-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: cd-pipeline-zjt7988-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-12-02T19:58:36Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.sandbox-m2.ll9k.p1.openshiftapps.com
